# imalgorithm

./: .gitignore  CMakeLists.txt  Makefile  README.md  conanfile.txt  imgui.ini
data/: test.txt
dependencies/: CMakeLists.txt
include/: algorithm_gui.hpp
include/algorithms/: algorithm.hpp  algorithm_coroutine.hpp  algorithm_gui.hpp  quicksort.hpp
include/algorithms/dijkstra/: dijkstra_gui.hpp
include/algorithms/graphs/dijkstra/: dijkstra_gui.hpp
include/algorithms/quicksort/: quicksort_coroutine.hpp  quicksort_gui.hpp
include/algorithms/sorts/bubblesort/: bubblesort_coroutine.hpp  bubblesort_gui.hpp
include/algorithms/sorts/quicksort/: quicksort_algorithm.hpp  quicksort_coroutine.hpp  quicksort_gui.hpp
include/utils/: draw_graph.hpp  imvec_operators.hpp
src/: imalgorithm.cpp  main.cpp
